# Operator.Station

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
app/: CMakeLists.txt
app/PiSubmarine/Operator/Station/: main.cpp
app/PiSubmarine/Operator/Station/Composition/: FakeControl.cpp  FakeControl.h  FakeInput.cpp  FakeInput.h  FakeLease.cpp  FakeLease.h  FakeTelemetry.cpp  FakeTelemetry.h  FakeVideo.cpp  FakeVideo.h  IControl.h  IInput.h  ILease.h  ITelemetry.h  IVideo.h  LeaseState.h  RemoteControl.cpp  RemoteControl.h  RemoteLease.cpp  RemoteLease.h  RemoteTelemetry.cpp  RemoteTelemetry.h  RemoteVideo.cpp  RemoteVideo.h
app/PiSubmarine/Operator/Station/Control/: Controller.cpp  Controller.h  FakeSink.cpp  FakeSink.h
app/PiSubmarine/Operator/Station/Control/View/: CameraControlOverlay.qml  ControlPanel.qml  LampControlOverlay.qml  ModeControlOverlay.qml  StatusPanel.qml  StatusViewModel.cpp  StatusViewModel.h  VerticalControlOverlay.qml  ViewModel.cpp  ViewModel.h
app/PiSubmarine/Operator/Station/Infrastructure/: QtLog.cpp  QtLog.h  SpdlogFactory.h
app/PiSubmarine/Operator/Station/Input/: AxisMultiplexor.cpp  AxisMultiplexor.h  BindingDescriptor.h  BindingDevice.h  Controller.cpp  Controller.h  FakeSink.cpp  FakeSink.h  KeyMultiplexor.cpp  KeyMultiplexor.h
app/PiSubmarine/Operator/Station/Input/QtKeyboard/: EventFilter.cpp  EventFilter.h  System.cpp  System.h
app/PiSubmarine/Operator/Station/Input/View/: BindingEntryViewModel.cpp  BindingEntryViewModel.h  BindingPanel.qml  BindingViewModel.cpp  BindingViewModel.h  ControlPanel.qml  ViewModel.cpp  ViewModel.h
app/PiSubmarine/Operator/Station/Lease/: FakeIssuer.cpp  FakeIssuer.h  IAsyncLeaseIssuer.h  SyncLeaseIssuerProxy.cpp  SyncLeaseIssuerProxy.h  ThreadWorker.cpp  ThreadWorker.h
app/PiSubmarine/Operator/Station/Logging/: QtLog.cpp  QtLog.h  SpdlogFactory.cpp  SpdlogFactory.h
app/PiSubmarine/Operator/Station/Qt/: App.cpp  App.h  QmlVideoSinkTailFactory.cpp  QmlVideoSinkTailFactory.h  StationApp.cpp  StationApp.h  VideoItem.cpp  VideoItem.h  VideoRuntimeWorker.cpp  VideoRuntimeWorker.h  VideoSurfaceItem.cpp  VideoSurfaceItem.h  VideoTailFactory.cpp  VideoTailFactory.h  qml.qrc
app/PiSubmarine/Operator/Station/Qt/qml/: Main.Windows.qml  Main.qml
app/PiSubmarine/Operator/Station/Shared/: Endpoint.h
app/PiSubmarine/Operator/Station/Telemetry/: BallastController.cpp  BallastController.h  BatteryController.cpp  BatteryController.h  Controller.cpp  Controller.h  DepthController.cpp  DepthController.h  FakeController.cpp  FakeController.h  FakeProviders.cpp  FakeProviders.h  FakeSubscriptionService.cpp  FakeSubscriptionService.h  ISubscriptionService.h  LampController.cpp  LampController.h  MotorController.cpp  MotorController.h  ProximityController.cpp  ProximityController.h  TimeController.cpp  TimeController.h  VideoStatusController.cpp  VideoStatusController.h
app/PiSubmarine/Operator/Station/Telemetry/View/Ballast/: BallastMotorPanel.qml  BallastOverlayRow.qml  BallastPanel.qml  ViewModel.cpp  ViewModel.h
app/PiSubmarine/Operator/Station/Telemetry/View/Battery/: BatteryPanel.qml  ViewModel.cpp  ViewModel.h
app/PiSubmarine/Operator/Station/Telemetry/View/Depth/: DepthOverlayRow.qml  DepthPanel.qml  ViewModel.cpp  ViewModel.h
app/PiSubmarine/Operator/Station/Telemetry/View/Lamp/: LampOverlayPanel.qml  LampPanel.qml  ViewModel.cpp  ViewModel.h
app/PiSubmarine/Operator/Station/Telemetry/View/Motor/: MotorPanel.qml  ViewModel.cpp  ViewModel.h
app/PiSubmarine/Operator/Station/Telemetry/View/Proximity/: ProximityOverlayRow.qml  ProximityPanel.qml  ViewModel.cpp  ViewModel.h
app/PiSubmarine/Operator/Station/Telemetry/View/Time/: FaultState.h  TimePanel.qml  ViewModel.cpp  ViewModel.h
app/PiSubmarine/Operator/Station/Telemetry/View/Video/: VideoPanel.qml  ViewModel.cpp  ViewModel.h
app/PiSubmarine/Operator/Station/Time/: TickRunner.cpp  TickRunner.h
app/PiSubmarine/Operator/Station/Video/: Config.h  Controller.cpp  Controller.h  FakeController.cpp  FakeController.h  FakePipeline.cpp  FakePipeline.h  FakePipelineBuilder.cpp  FakePipelineBuilder.h  GstreamerPipeline.cpp  GstreamerPipeline.h  IPipeline.h  IPipelineBuilder.h  IVideoPipelineTailFactory.h  RtpPipeline.cpp  RtpPipeline.h  RtpPipelineBuilder.cpp  RtpPipelineBuilder.h  Status.h
app/PiSubmarine/Operator/Station/Video/View/: QmlVideoSinkTailFactory.cpp  QmlVideoSinkTailFactory.h  StatusOverlayViewModel.cpp  StatusOverlayViewModel.h  VideoSurfaceItem.cpp  VideoSurfaceItem.h  ViewModel.cpp  ViewModel.h
app/PiSubmarine/Operator/Station/View/: qml.qrc
app/PiSubmarine/Operator/Station/View/qml/: Main.Windows.qml  Main.qml  OverlayContainer.qml  Theme.js  WindowsVideoSurface.qml
doc/: TODO.md  TODO.txt
mock/: CMakeLists.txt
mock/PiSubmarine/Operator/Station/: IApplicationMock.h
public/PiSubmarine/Operator/Station/: Application.h  IApplication.h
public/PiSubmarine/Operator/Station/Video/: Config.h  IPipelineBuilder.h  IVideoPipelineTailFactory.h  RtpPipelineBuilder.h  Status.h  VideoController.h
src/: CMakeLists.txt
src/PiSubmarine/Operator/Station/Video/: FakePipelineBuilder.cpp  GstreamerPipeline.cpp  GstreamerPipeline.h  IPipeline.h  RtpPipeline.cpp  RtpPipeline.h  RtpPipelineBuilder.cpp  StaticPluginRegistration.cpp  StaticPluginRegistration.h  VideoController.cpp
test/: CMakeLists.txt
test/PiSubmarine/Operator/Station/: ApplicationTest.cpp
test/PiSubmarine/Operator/Station/Control/: ControllerTest.cpp
test/PiSubmarine/Operator/Station/Input/: AxisMultiplexorTest.cpp  KeyMultiplexorTest.cpp
test/PiSubmarine/Operator/Station/Lease/: SyncLeaseIssuerProxyTest.cpp
test/PiSubmarine/Operator/Station/Video/: ControllerTest.cpp  VideoControllerTest.cpp
vcpkg-overlay-ports/gstreamer/: portfile.cmake  vcpkg.json
